| \__/\ | | | (_| |   < (_) | | | (_| |
 \____/_| |_|\__,_|_|\_\___/|_|  \__,_|

                 CHANGELOG
---------------------------------------

Current Devel
	- HostServ: Update hostserv/main to match the updated API.
	- Config/Modules: nickserv/register now allows you to set a maximum number of accounts an email can be associated with and enforces it.
	- Modules: Finished nickserv/drop

1.0.0-alpha1
	- InspIRCd: Join after the ircd is done bursting to us
	- InspIRCd: Store TS
	- InspIRCd: Use FJOIN properly
	- All: Fixed a few possible small memory leaks
	- Protocols: Added serv_cmode, for a regular MODE command
	- InspIRCd: m_servprotect is no longer required
	- Module API: Store module author and version for module listing
	- API: Added ctcp_reply
	- Setup: We no longer provide a config generator, we now provide an example config for you to edit
	- InspIRCd/Charybdis: Properly handle whether or not a user is an oper. 
	- Module API: added event_deoper and event_oper (meaning you can add hooks for them)
	- Contrib - mattwb65: Updated os_userlog to handle opers and deopers
	- InspIRCd/Charybdis: Track linked servers
	- Module API: added sidInfo
	- Module API: added event_sid and event_netsplit (meaning you can add hooks for them)
	- Contrib - mattwb65: Updated os_userlog to log server introductions and splits
	- InspIRCd/Charybdis: Track users away status
	- Module API: added event_away and event_back (meaning you can add hooks for them)
	- Contrib - mattwb65: Updated os_userlog to log when a user goes away and returns
	- Module API: event_uid now includes the server a user is connecting from
	- Contrib - mattwb65: Updated os_userlog to log what server a user is quitting/connecting from
	- API: Added is_soper
	- Modules: Added operserv/shutdown and operserv/global
	- API: added module_load
	- Modules: Added operserv/modlist and operserv/modload
	- Contrib - mattwb65: Added testing operserv/modunload
	- API fix: Fixed a bug in module_void